--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,6 +16,9 @@
     data-big
   {% endif %}
 >
+<div class="header-container">
+  <!-- Other header elements, such as navigation or logo -->
+</div>
   <a href="{{ "/" | relative_url }}" class="home">
     {% if logo %}
       <span class="logo">
@@ -28,7 +31,7 @@
           <span class="title">{{ site.title }}</span>
         {% endif %}
         {% if site.subtitle and site.show-subtitle != false %}
-          <span class="subtitle">{{ site.subtitle }}</span>
+          <span class="subtitle">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ site.subtitle }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
         {% endif %}
       </span>
     {% endif %}
