--- a/_styles/-theme.scss
+++ b/_styles/-theme.scss
@@ -40,6 +40,12 @@
   --xl: 2.1rem;
   --xxl: 2.4rem;
 
+  --mobilelarge: 1.0rem;
+  --mobiletitlesize:1.2rem;
+  --mobilesubtitlesize: 1.1rem;
+  --mobilexl: 1.2rem;
+  --mobilexxl: 1.3rem;
+
   // font weights
   --thin: 200;
   --regular: 400;
