--- a/_styles/card.scss
+++ b/_styles/card.scss
@@ -6,7 +6,7 @@
   justify-content: stretch;
   align-items: center;
   flex-direction: column;
-  width: 350px;
+  width: 100vw;
   max-width: calc(100% - 20px - 20px);
   margin: 20px;
   background: var(--background);
@@ -17,7 +17,7 @@
 }
 
 .card[data-style="small"] {
-  width: 250px;
+  width: 450px;
 }
 
 .card-image img {
